ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail161.hs
-- Kind error message

module ShouldFail where

f :: [Maybe]
f x = x

